POM Remove Thymeleaf Extras8Time